# resume

./: FirstName_LastName_CV.yaml  Harnoor_Singh_CV.yaml  Harnoor_Singh_Resume.yaml  Parneet_Kaur_CV.yaml  Parneet_Kaur_Resume.yaml  README.md  classic_CV.yaml  notes.md  pyproject.toml  requirements.txt  sb2nov_CV.yaml
archive/: Harnoor_Singh_Resume.yaml  Harnoor_Singh_Resume_WT6.yaml
