[project]
name = "resume"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "annotated-types==0.7.0",
    "click==8.1.8",
    "dnspython==2.7.0",
    "email-validator==2.2.0",
    "idna==3.10",
    "jinja2==3.1.6",
    "markdown==3.7",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.2",
    "mdurl==0.1.2",
    "packaging==24.2",
    "phonenumbers==8.13.53",
    "pycountry==24.6.1",
    "pydantic==2.10.5",
    "pydantic-core==2.27.2",
    "pydantic-extra-types==2.10.2",
    "pygments==2.19.1",
    "rendercv==2.2",
    "rendercv-fonts==0.4.0",
    "rich==14.0.0",
    "ruamel-yaml==0.18.6",
    "ruamel-yaml-clib==0.2.12",
    "shellingham==1.5.4",
    "typer==0.15.1",
    "typing-extensions==4.13.2",
    "typst==0.12.3",
    "watchdog==6.0.0",
]
